--- a/publish.gradle
+++ b/publish.gradle
@@ -17,8 +17,8 @@ ext.configurePublishing = { packageName, packageDesc, packageVersion ->
                 def snapshotsRepoUrl = 'https://oss.sonatype.org/content/repositories/snapshots'
                 url = version.endsWith('SNAPSHOT') ? snapshotsRepoUrl : releasesRepoUrl
                 credentials {
-                    username = System.getenv('NEXUS_UPD_ID')?.trim() ?: ''
-                    password = System.getenv('NEXUS_UPD_PASS')?.trim() ?: ''
+                    username = System.getenv('NEXUS_UPD_ID')
+                    password = System.getenv('NEXUS_UPD_PASS')
                 }
             }
         }
@@ -38,15 +38,15 @@ ext.configurePublishing = { packageName, packageDesc, packageVersion ->
                     url = 'https://github.com/SpaiR/imgui-java'
                     licenses {
                         license {
-                            name = 'MIT License'
-                            url = 'https://opensource.org/license/mit/'
+                            name = 'The Apache License, Version 2.0'
+                            url = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
                         }
                     }
                     developers {
                         developer {
                             id = 'SpaiR'
                             name = 'Ilya Prymshyts'
-                            email = 'despsolver@gmail.com'
+                            email = 'klimbetoo@gmail.com'
                         }
                     }
                     scm {
@@ -60,10 +60,9 @@ ext.configurePublishing = { packageName, packageDesc, packageVersion ->
     }
     if (System.getenv('SIGNING_KEY_ID') != null) {
         signing {
-            def signingKeyId = System.getenv('SIGNING_KEY_ID')?.trim() ?: ''
-            def signingKey = System.getenv('SIGNING_KEY')?.trim() ?: ''
-            def signingKeyPass = System.getenv('SIGNING_KEY_PASS')?.trim() ?: ''
-            useInMemoryPgpKeys(signingKeyId, signingKey, signingKeyPass)
+            def signingKeyId = System.getenv('SIGNING_KEY_ID')
+            def signingKey = System.getenv('SIGNING_KEY')
+            useInMemoryPgpKeys(signingKeyId, signingKey, '')
             sign publishing.publications.imgui
         }
     }
